fix: backlight bleed no longer displays with no power

--- a/flybywire-aircraft-a320-neo/html_ui/CSS/A32NX_Display_Common.css
+++ b/flybywire-aircraft-a320-neo/html_ui/CSS/A32NX_Display_Common.css
@@ -66,7 +66,7 @@ text {
 }
 
 /* Backlight Bleed*/
-#panel:after {
+#BacklightBleed {
   content: '';
   width: 100%;
   height: 100%;
