--- a/src/instruments/src/Common/pixels.scss
+++ b/src/instruments/src/Common/pixels.scss
@@ -14,15 +14,21 @@
     background-color: rgba(80, 80, 80, 0.2);
   } @else {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E%3Cpath d='M0 0 V10 Z H10 Z' stroke='%23000' stroke-width='#{$spacing}' fill='none'/%3E%3C/svg%3E");
-    @if $bleed {
-      /* subtle tint, bleed and edge bleed */
-      background-color: rgba(0, 0, 255, 0.025);
-      box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
-    }
   }
 
 }
 
 .LcdOverlay {
   @include pixels;
+}
+
+.BacklightBleed {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 998;
+  opacity: 0.75;
+  background-color: rgba(0, 0, 255, 0.025);
+  box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
 }
